--- a/Backend/package.json
+++ b/Backend/package.json
@@ -11,7 +11,8 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "firebase": "^11.0.2",
-    "firebase-admin": "^11.11.1"
+    "firebase-admin": "^11.11.1",
+    "nodemon": "^3.1.7"
   },
   "keywords": [],
   "author": "",
